Added entities, Repo interfaces defined

--- a/Backend/Chess.API/appsettings.Development.json
+++ b/Backend/Chess.API/appsettings.Development.json
@@ -9,6 +9,10 @@
   "ChessDatabaseSettings": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "Chess",
-    "ChatMessagesCollectionName": "ChatMessages"
+    "ChatMessagesCollectionName": "ChatMessages",
+    "MovesCollectionName": "Moves",
+    "VotesCollectionName": "Votes",
+    "LobbiesCollectionName": "Lobbies",
+    "LobbyConfigCollectionName": "LobbyConfigs"
   }
 }
