--- a/SignalRTester/Properties/launchSettings.json
+++ b/SignalRTester/Properties/launchSettings.json
@@ -1,6 +1,9 @@
 {
   "profiles": {
-    "ConsoleApp1": {
+    "WSL": {
+      "commandName": "WSL2"
+    },
+    "SignalRTest": {
       "commandName": "Project",
       "commandLineArgs": "1000"
     }
